--- a/Views/Device/Index.cshtml
+++ b/Views/Device/Index.cshtml
@@ -159,20 +159,20 @@
                 filesList.forEach((f, i) => {
                     const tr = document.createElement("tr");
                     tr.innerHTML = `
-                                    <td>${i + 1}</td>
-                                    <td>${f.name}</td>
-                                    <td>${f.size}</td>
-                                    <td>
-                                        <div class="d-flex gap-2 justify-content-center">
-                                            <button class="btn btn-sm btn-outline-success" onclick="downloadFile('${f.name}')">
-                                                <i class="bi bi-download"></i> Download
-                                            </button>
-                                            <button class="btn btn-sm btn-outline-danger" onclick="deleteFile('${f.name}', ${i})">
-                                                <i class="bi bi-trash"></i> Delete
-                                            </button>
-                                        </div>
-                                    </td>
-                                `;
+                                            <td>${i + 1}</td>
+                                            <td>${f.name}</td>
+                                            <td>${f.size}</td>
+                                            <td>
+                                                <div class="d-flex gap-2 justify-content-center">
+                                                    <button class="btn btn-sm btn-outline-success" onclick="downloadFile('${f.name}')">
+                                                        <i class="bi bi-download"></i> Download
+                                                    </button>
+                                                    <button class="btn btn-sm btn-outline-danger" onclick="deleteFile('${f.name}', ${i})">
+                                                        <i class="bi bi-trash"></i> Delete
+                                                    </button>
+                                                </div>
+                                            </td>
+                                        `;
                     filesTable.appendChild(tr);
                 });
 
@@ -209,6 +209,20 @@
                 showToast(err.message, "error");
             }
         }
+        async function disconnectDevice(deviceId) {
+            try {
+                const res = await fetch(`/Device/disconnect?deviceId=${selectedDevice}`, { method: "POST" });
+                if (!res.ok) throw new Error("disconnecting failed");
+                @* filesList.splice(index, 1);
+                getFiles(); *@
+                    loadDevices();
+                resetStatusFields();
+                showToast(`Disconnecting ${deviceId}`, "succeed");
+            } catch (err) {
+                showToast(err.message, "error");
+            }
+        }
+
 
         async function deleteAllFiles() {
             try {
@@ -226,6 +240,6 @@
         btnGetFiles.addEventListener("click", getFiles);
         btnDeleteAll.addEventListener("click", deleteAllFiles);
 
-        document.getElementById("btnDisconnect").addEventListener("click", resetStatusFields);
+        document.getElementById("btnDisconnect").addEventListener("click", disconnectDevice);
     </script>
 }
